<resources>
    <string name="app_name">Logica2</string>
    <string name="conjunction_and">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_b">A^B</string>
    <string name="t">T</string>
    <string name="answer">Answer</string>
    <string name="button">Button</string>
    <string name="submit">Submit</string>
    <string name="answeronet">answerOneT</string>
    <string name="f">F</string>
</resources>
